<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">TasteEmAll</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_producer">ProducerActivity</string>
    <string name="title_show_review"><xliff:g id="producer">%1$s</xliff:g> - <xliff:g id="drink">%2$s</xliff:g>-Review</string>
    <string name="title_show_drink"><xliff:g id="producer">%2$s</xliff:g> - <xliff:g id="drink">%3$s</xliff:g></string>
    <string name="title_show_producer"><xliff:g id="producer">%1$s</xliff:g></string>
    <string name="title_add_producer_activity">add producer</string>
    <string name="title_edit_producer_activity_preview">edit a <xliff:g id="producerType">%1$s</xliff:g></string>
    <string name="title_edit_producer_activity">edit <xliff:g id="producer">%1$s</xliff:g></string>
    <string name="title_add_drink_activity">add a <xliff:g id="drinkType">%1$s</xliff:g></string>
    <string name="title_edit_drink_activity_preview">edit a <xliff:g id="drinkType">%1$s</xliff:g></string>
    <string name="title_edit_drink_activity">edit <xliff:g id="producerName">%2$s</xliff:g> - <xliff:g id="drinkName">%1$s</xliff:g></string>
    <string name="title_add_review_activity_preview">add a <xliff:g id="drinkType">%1$s</xliff:g>-Review</string>
    <string name="title_add_review_activity">add <xliff:g id="producerName">%2$s</xliff:g> - <xliff:g id="drinkName">%1$s</xliff:g>-Review</string>
    <string name="title_edit_review_activity_preview">edit a <xliff:g id="drinkType">%1$s</xliff:g>-Review</string>
    <string name="title_edit_review_activity">edit <xliff:g id="producerName">%2$s</xliff:g> - <xliff:g id="drinkName">%1$s</xliff:g>-Review</string>
    <string name="search_title">search</string>
    <string name="completion_subentry_formatting" translatable="false">(<xliff:g id="subentry">%1$s</xliff:g>)</string>
    <string name="completion_prefix_formatting" translatable="false"><xliff:g id="subentry">%1$s</xliff:g>: </string>
    <string name="pref_label_type">Type of drink</string>
    <string name="pref_key_type" translatable="false">drink_type</string>
    <string name="pref_label_user_name">Username</string>
    <string name="pref_key_user_name" translatable="false">pref_key_user_name</string>
    <string name="pref_value_user_name_empty"/>
    <string name="date_format">dd.MM.yyyy</string>
    <string name="hour_format">HH:mm:ss</string>
    <string name="short_format">dd.MM.yy HH:mm</string>
    <string name="drink_key_all" translatable="false">all</string>
    <string name="drink_show_all">All</string>
    <string name="label_producer">Producer</string>
    <string name="label_drink">Drink</string>
    <string name="label_review">Review</string>
    <string name="label_producers">Producers</string>
    <string name="label_locations">Locations</string>
    <string name="label_drinks">Drinks</string>
    <string name="label_reviews">Reviews</string>
    <string name="label_users">Users</string>
    <string name="label_producer_details">producer details</string>
    <string name="label_drink_details">drink details</string>
    <string name="label_review_details">review details</string>
    <string name="label_numberAppendix"> (<xliff:g id="number">%1$d</xliff:g>)</string>
    <string name="label_list_of_locations_preview">list of locations</string>
    <string name="label_list_of_locations">list of locations<xliff:g id="numberAppendix">%1$s</xliff:g></string>
    <string name="label_list_of_producers_preview">list of producers</string>
    <string name="label_list_of_producers">list of producers<xliff:g id="numberAppendix">%1$s</xliff:g></string>
    <string name="label_list_of_drinks_preview">list of drinks</string>
    <string name="label_list_of_drinks">list of drinks<xliff:g id="numberAppendix">%1$s</xliff:g></string>
    <string name="label_list_of_reviews_preview">list of reviews</string>
    <string name="label_list_of_reviews">list of reviews<xliff:g id="numberAppendix">%1$s</xliff:g></string>
    <string name="label_list_preview">list of entries</string>
    <string name="label_list_entries_preview">list of <xliff:g id="entries">%1$s</xliff:g></string>
    <string name="label_list_entries">list of <xliff:g id="entries">%1$s</xliff:g><xliff:g id="numberAppendix">%2$s</xliff:g></string>
    <string name="producer_details_label"><xliff:g id="producer">%1$s</xliff:g> details</string>
    <string name="drink_details_label"><xliff:g id="drink">%1$s</xliff:g> details</string>
    <string name="label_producer_name">Name</string>
    <string name="hint_producer_name">name of the producer</string>
    <string name="producer_location">Location</string>
    <string name="producer_location_country">Country</string>
    <string name="producer_location_address">Address</string>
    <string name="hint_producer_location">location of the producer</string>
    <string name="label_producer_website">Website</string>
    <string name="hint_producer_website">website of the producer</string>
    <string name="label_producer_description">description</string>
    <string name="hint_producer_description">description of the producer</string>
    <string name="a11y_producer_name">name of producer is <xliff:g id="name">%1$s</xliff:g></string>
    <string name="a11y_producer_location">location of producer is <xliff:g id="loc">%1$s</xliff:g></string>
    <string name="a11y_producer_description">description for producer is <xliff:g id="desc">%1$s</xliff:g></string>
    <string name="label_drink_name">Name</string>
    <string name="hint_drink_name">name of the drink</string>
    <string name="label_drink_type">Type</string>
    <string name="label_drink_style">Style</string>
    <string name="hint_drink_style">style of the type of drink</string>
    <string name="label_drink_ingredients">Ingredients</string>
    <string name="hint_drink_ingredients">ingredients of the drink</string>
    <string name="label_drink_specifics">Specifics</string>
    <string name="hint_drink_specifics">other specifics of the drink (like mixture of coffee-beans or ABV of an alcoholic drink)</string>
    <string name="a11y_enter_producer_name">enter name of the producer</string>
    <string name="hint_search_producer">search producer</string>
    <string name="a11y_choose_drinkType_preview">choose a drinktype for your review</string>
    <string name="a11y_chosen_drinkType">the selected type of drink is <xliff:g id="drinkType">%1$s</xliff:g></string>
    <string name="a11y_drink_name">name of drink is <xliff:g id="name">%1$s</xliff:g></string>
    <string name="a11y_drink_type">the drink is a <xliff:g id="readableDrinkTypeName">%1$s</xliff:g></string>
    <string name="a11y_drink_type_simple">the type of the drink is <xliff:g id="drinkType">%1$s</xliff:g></string>
    <string name="a11y_drink_style">the style of the drink is <xliff:g id="style">%1$s</xliff:g></string>
    <string name="a11y_no_drink_style">no further style of the drink is given</string>
    <string name="a11y_user_name">name of the drinking and reviewing user is <xliff:g id="name">%1$s</xliff:g></string>
    <string name="label_review_user_name">User</string>
    <string name="hint_review_user_name">name of the reviewer</string>
    <string name="label_review_rating">Rating</string>
    <string name="pre_filled_rating">choose</string>
    <string name="description_help_review_rating">show explanation for the rating</string>
    <string name="label_review_description">Description</string>
    <string name="hint_review_description">detailed review text</string>
    <string name="label_review_recommended_sides">Recommended\nsides</string>
    <string name="hint_review_recommended_sides">f.e. a matching meal</string>
    <string name="label_review_readable_date">Date</string>
    <string name="hint_review_readable_date">date of the review (local time)</string>
    <string name="label_review_location">Location</string>
    <string name="hint_review_location">location of the review</string>
    <string name="a11y_enter_drink_name_autocomplete">enter drink name for autocompletion</string>
    <string name="a11y_choose_review_rating_preview">choose a review rating</string>
    <string name="a11y_chosen_review_rating">chosen review rating is <xliff:g id="rating">%1$s</xliff:g></string>
    <string name="a11y_review_rating">it got a <xliff:g id="rating">%1$s</xliff:g> as review rating</string>
    <string name="a11y_review_date">the review was created at <xliff:g id="date">%1$s</xliff:g></string>
    <string name="hint_search_drink">search the drink</string>
    <string name="title_settings">Settings</string>
    <string name="menu_action_save">save</string>
    <string name="menu_action_edit">edit</string>
    <string name="menu_action_delete">delete</string>
    <string name="text_choose_a_producer">choose a producer</string>
    <string name="text_choose_a_drink">choose a drink</string>
    <string name="a11y_add_a_new_producer">create a new producer</string>
    <string name="a11y_add_a_new_drink">create a new drink</string>
    <string name="a11y_add_a_new_user">create a new user with this username</string>
    <string name="text_plus" translatable="false">+</string>
    <string name="text_location_here_button">here</string>
    <string name="a11y_location_here_button">here</string>
    <string name="text_questionmark" translatable="false">\?</string>
    <string name="a11y_choose_export_dir">choose the directory on your phone for exports</string>
    <string name="hint_choose_export_dir">choose export directory</string>
    <string name="action_export">Export database</string>
    <string name="action_import">Import database</string>
    <string name="action_geocode">Start geocode</string>
    <string name="action_show_map">Show Map</string>
    <string name="action_share">share</string>
    <string name="a11y_add_review">add a new review</string>
    <string name="file_locations" translatable="false">Locations</string>
    <string name="file_producers" translatable="false">Producers</string>
    <string name="file_drinks" translatable="false">Drinks</string>
    <string name="file_users" translatable="false">Users</string>
    <string name="file_reviews" translatable="false">Reviews</string>
    <string name="action_map_type_terrain">terrain</string>
    <string name="action_map_type_hybrid">hybrid</string>
    <string name="action_map_type_satellite">satellite</string>
    <string name="action_map_type_normal">normal</string>
    <string name="action_map_type_none">none</string>
    <string name="shared_transition_review_drink" translatable="false">shared_transition_review_drink</string>
    <string name="shared_transition_review_producer" translatable="false">shared_transition_review_producer</string>
    <string name="shared_transition_producer_producer" translatable="false">shared_transition_producer_producer</string>
    <string name="example_review_date">example 20160509</string>
    <string name="example_review_user_name">example_user</string>
    <string name="example_review_location">example somewhere</string>
    <string name="example_review_recommended_sides">example Kartoffelbrot</string>
    <string name="example_review_description">example great taste and smell</string>
    <string name="example_drink_specifics">example some specifics</string>
    <string name="example_drink_ingredients">example some ingredients</string>
    <string name="example_review_rating">++</string>
    <string name="example_drink_type">example beer</string>
    <string name="example_drink_style">example IPA</string>
    <string name="example_website">example NO website</string>
    <string name="example_brewery">example THE Brewery</string>
    <string name="example_producer_description">example since 1666</string>
    <string name="example_drink_name">example some drink</string>
    <string name="example_location">example TestLocation</string>
</resources>