<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.fbartnitzek.tasteemall.MainActivity">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_geocode"
        android:orderInCategory="50"
        android:title="@string/action_geocode"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_export"
        android:orderInCategory="70"
        android:title="@string/action_export"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_import"
        android:orderInCategory="75"
        android:title="@string/action_import"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_show_map"
        android:orderInCategory="20"
        android:title="@string/action_show_map"
        app:showAsAction="never"/>
</menu>
