<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_map_type_none"
        android:orderInCategory="20"
        android:title="@string/action_map_type_none"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_map_type_normal"
        android:orderInCategory="21"
        android:title="@string/action_map_type_normal"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_map_type_satellite"
        android:orderInCategory="22"
        android:title="@string/action_map_type_satellite"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_map_type_terrain"
        android:orderInCategory="23"
        android:title="@string/action_map_type_terrain"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_map_type_hybrid"
        android:orderInCategory="24"
        android:title="@string/action_map_type_hybrid"
        app:showAsAction="never"/>

</menu>