<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/fragment_show_review">

    <!-- might be useful to include details from other views -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- maxLines after grid ... -->

        <!--Producer-->
        <TextView
            android:id="@id/heading_choose_drink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:gravity="center"
            android:text="@string/label_producer_details"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="8dp">

            <TextView
                android:id="@+id/label_producer_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingEnd="40dp"
                android:paddingRight="40dp"
                android:text="@string/label_producer"/>

            <TextView
                android:id="@+id/producer_name"
                android:focusable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:transitionName="@string/shared_transition_review_producer"
                android:text="@string/example_brewery"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="32dp">

            <TextView
                android:id="@+id/label_producer_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="40dp"
                android:paddingRight="40dp"
                android:text="@string/producer_location"/>

            <TextView
                android:id="@+id/producer_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/example_location"/>
        </LinearLayout>

        <!-- Drink -->
        <TextView
            android:id="@id/label_drink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:gravity="center"
            android:text="@string/label_drink_details"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="8dp">

            <TextView
                android:id="@+id/label_drink_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingEnd="40dp"
                android:paddingRight="40dp"
                android:text="@string/label_drink_name"/>

            <TextView
                android:id="@+id/drink_name"
                android:focusable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:transitionName="@string/shared_transition_review_drink"
                android:layout_gravity="center"
                android:text="@string/example_drink_name"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="8dp">

            <TextView
                android:id="@+id/label_drink_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="40dp"
                android:paddingRight="40dp"
                android:text="@string/label_drink_type"/>

            <TextView
                android:id="@+id/drink_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/example_drink_type"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="8dp">

            <TextView
                android:id="@+id/label_drink_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingEnd="40dp"
                android:paddingRight="40dp"
                android:text="@string/label_drink_style"/>

            <TextView
                android:id="@+id/drink_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/example_drink_style"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="8dp">

            <TextView
                android:id="@+id/label_drink_specifics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="40dp"
                android:paddingRight="40dp"
                android:text="@string/label_drink_specifics"/>

            <TextView
                android:id="@+id/drink_specifics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/example_drink_specifics"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="32dp">

            <TextView
                android:id="@+id/label_drink_ingredients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="40dp"
                android:paddingRight="40dp"
                android:text="@string/label_drink_ingredients"/>

            <TextView
                android:id="@+id/drink_ingredients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/example_drink_ingredients"/>
        </LinearLayout>

        <!--Review-->
        <TextView
            android:id="@id/label_review"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:gravity="center"
            android:text="@string/label_review_details"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="8dp">

            <TextView
                android:id="@+id/label_review_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingEnd="40dp"
                android:paddingRight="40dp"
                android:text="@string/label_review_user_name"/>

            <TextView
                android:id="@+id/review_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/example_review_user_name"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="8dp">

            <TextView
                android:id="@+id/label_review_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingEnd="40dp"
                android:paddingRight="40dp"
                android:text="@string/label_review_rating"/>

            <TextView
                android:id="@+id/review_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/example_review_rating"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="8dp">

            <TextView
                android:id="@+id/label_review_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingEnd="40dp"
                android:paddingRight="40dp"
                android:text="@string/label_review_description"/>

            <TextView
                android:id="@+id/review_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/example_review_description"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="8dp">

            <TextView
                android:id="@+id/label_review_recommended_sides"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingEnd="40dp"
                android:paddingRight="40dp"
                android:text="@string/label_review_recommended_sides"/>

            <TextView
                android:id="@+id/review_recommended_sides"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/example_review_recommended_sides"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="8dp">

            <TextView
                android:id="@+id/label_review_readable_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingEnd="40dp"
                android:paddingRight="40dp"
                android:text="@string/label_review_readable_date"/>

            <TextView
                android:id="@+id/review_readable_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/example_review_date"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="8dp">

            <TextView
                android:id="@+id/label_review_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingEnd="40dp"
                android:paddingRight="40dp"
                android:text="@string/label_review_location"/>

            <TextView
                android:id="@+id/review_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/example_review_location"/>
        </LinearLayout>

    </LinearLayout>


</android.support.v4.widget.NestedScrollView>


