<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/fragment_show_producer">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/label_producer_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingBottom="8dp"
                android:paddingEnd="40dp"
                android:paddingRight="40dp"
                android:text="@string/label_producer"/>

            <TextView
                android:id="@+id/producer_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingBottom="8dp"
                android:transitionName="@string/shared_transition_producer_producer"
                android:text="@string/example_brewery"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="32dp">

            <TextView
                android:id="@+id/label_producer_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="40dp"
                android:paddingRight="40dp"
                android:text="@string/producer_location"/>

            <TextView
                android:id="@+id/producer_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/example_location"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="32dp">

            <TextView
                android:id="@+id/label_producer_website"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="40dp"
                android:paddingRight="40dp"
                android:text="@string/label_producer_website"/>

            <TextView
                android:focusable="true"
                android:id="@+id/producer_website"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/example_website"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="32dp">

            <TextView
                android:id="@+id/label_producer_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="40dp"
                android:paddingRight="40dp"
                android:text="@string/label_producer_description"/>

            <TextView
                android:id="@+id/producer_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/example_producer_description"/>
        </LinearLayout>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>

