<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- TODO: combine user-id anyhow... -->
    <!-- a) store id as string in shared prefs on first load...? -->
    <!-- b) replace settings activity with normal activity...-->
    <!-- c) new workaround: store name, search name in ReviewFragment...-->
    <EditTextPreference
        android:key="@string/pref_key_user_name"
        android:title="@string/pref_label_user_name"
        android:contentDescription="enter the default user name for reviews"
        android:hint="default user name for reviews"/>

    <ListPreference
        android:defaultValue="@string/drink_key_generic"
        android:entries="@array/pref_type_filter_titles"
        android:entryValues="@array/pref_type_filter_values"
        android:key="@string/pref_key_type"
        android:title="@string/pref_label_type" />

    <!-- TODO: easier for now to choose dir directly on button pressed -->
    <!--<EditTextPreference-->
        <!--android:key="pref_export_directory"-->
        <!--android:title="@string/pref_label_export_dir"-->
        <!--android:contentDescription="@string/content_desc_choose_export_dir"-->
        <!--android:hint="@string/hint_choose_export_dir"/>-->

</PreferenceScreen>