<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
    android:layout_margin="4dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/list_item_producer_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="3"
            android:gravity="center"
            android:transitionName="@string/shared_transition_producer"
            android:text="@string/example_brewery"/>

        <TextView
            android:id="@+id/list_item_drink_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="3"
            android:gravity="center"
            android:transitionName="@string/shared_transition_drink"
            android:text="@string/example_drink_name"/>
    </LinearLayout>

    <!-- later icons per drinkType? -->
    <TextView
        android:id="@+id/list_item_drink_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/example_drink_type"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/list_item_review_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/example_review_rating"/>

        <TextView
            android:id="@+id/list_item_review_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/example_review_date"/>
    </LinearLayout>

</LinearLayout>